testsuite/tests/indexed-types/should_fail/T16110_Fail2.stderr

T16110_Fail2.hs:9:3: error:
    • Illegal duplicate variable ‘b’ in:
        ‘type T a b b = Int’
        The arguments to ‘T’ must all be distinct type variables
    • In the default type instance declaration for ‘T’
      In the class declaration for ‘C’
